--- a/src/app/common/components/header/header.component.html
+++ b/src/app/common/components/header/header.component.html
@@ -9,7 +9,7 @@
                     </span>
                 </button>
                 <div class="dropdown-menu dropdown-menu-end">
-                    <a class="dropdown-item" href="javascript:void(0);"><i
+                    <a class="dropdown-item" href="javascript:void(0);" (click)="redirectTo('profile')"><i
                             class="mdi mdi-account-circle text-muted fs-16 align-middle me-1"></i> <span
                             class="align-middle">Profile</span></a>
                     <a class="dropdown-item" href="javascript:void(0);"><i
