--- a/src/app/components/master/dashboard/dashboard.component.html
+++ b/src/app/components/master/dashboard/dashboard.component.html
@@ -1,1 +1,16 @@
-<p>dashboard works!</p>
+<div class="dashboardContainer">
+    <div class="mainContainer">
+        <div class="taskContainer">
+            <ng-container>
+                <div class="task-board">
+                    <app-task-board></app-task-board>
+                </div>
+            </ng-container>
+
+            <div class="addTaskBoard">
+                + Add board
+            </div>
+
+        </div>
+    </div>
+</div>
