--- a/src/app/components/master/dashboard/dashboard.component.scss
+++ b/src/app/components/master/dashboard/dashboard.component.scss
@@ -18,9 +18,7 @@
             .task-board {
                 display: flex;
                 flex-direction: column;
-                padding: 15px 10px;
                 width: 23%;
-                background-color: #ececec;
             }
 
             .addTaskBoard {
@@ -28,7 +26,130 @@
                 right: 10px;
                 top: -12px;
                 font-size: 15px;
+                cursor: pointer;
             }
         }
     }
+}
+
+
+.taskBoard {
+    width: 100%;
+    background-color: #ececec;
+    padding: 15px;
+    border-radius: 3px;
+    position: relative;
+
+    .boardTitle {
+        font-size: 16px;
+        font-weight: 500;
+    }
+
+    .taskList {
+        margin-top: 7px;
+        display: flex;
+        flex-direction: column;
+
+        .task {
+            display: flex;
+            flex-direction: column;
+            background-color: white;
+            border: 7px;
+            padding: 8px;
+            border-radius: 4px;
+            margin-top: 10px;
+            align-items: flex-start;
+            position: relative;
+
+            .editTask {
+                position: absolute;
+                right: 10px;
+                z-index: 10;
+                cursor: pointer;
+            }
+        }
+
+        .createTask {
+            margin-top: 10px;
+            margin-left: 6px;
+            cursor: pointer;
+        }
+    }
+
+    .editBoard {
+        position: absolute;
+        right: 15px;
+        top: 10px;
+
+        button {
+            border: none;
+        }
+    }
+}
+
+.example-container {
+    width: 400px;
+    max-width: 100%;
+    margin: 0 25px 25px 0;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.example-list {
+    border: solid 1px #ccc;
+    min-height: 60px;
+    background: white;
+    border-radius: 4px;
+    overflow: hidden;
+    display: block;
+}
+
+.example-box {
+    padding: 20px 10px;
+    border-bottom: solid 1px #ccc;
+    color: rgba(0, 0, 0, 0.87);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    box-sizing: border-box;
+    cursor: move;
+    background: white;
+    font-size: 14px;
+}
+
+.cdk-drag-preview {
+    box-sizing: border-box;
+    border-radius: 4px;
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+        0 8px 10px 1px rgba(0, 0, 0, 0.14),
+        0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-placeholder {
+    opacity: 0;
+}
+
+.cdk-drag-animating {
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.example-box:last-child {
+    border: none;
+}
+
+.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+::ng-deep .mat-mdc-menu-panel {
+    margin-left: -45px;
+}
+
+::ng-deep .mat-mdc-menu-item {
+    min-height: 35px !important;
+}
+
+::ng-deep .mat-mdc-menu-item-text {
+    font-size: 14px !important;
 }
