--- a/src/app/components/task/create-task-board/create-task-board.component.html
+++ b/src/app/components/task/create-task-board/create-task-board.component.html
@@ -14,9 +14,9 @@
             </div>
 
             <div class="submitBtns">
-                <button class="submit" *ngIf="!data.boardId" mat-raised-button color="primary"
+                <button class="submit" *ngIf="!isEdit" mat-raised-button color="primary"
                     (click)="createTaskBoard()">Create</button>
-                <button class="submit" *ngIf="data.boardId" mat-raised-button color="primary"
+                <button class="submit" *ngIf="isEdit" mat-raised-button color="primary"
                     (click)="updateTaskBoard()">Update</button>
                 <button class="close" mat-raised-button color="warn" (click)="closeDialog()">Close</button>
             </div>
