--- a/src/app/common/components/signup/signup.component.html
+++ b/src/app/common/components/signup/signup.component.html
@@ -10,42 +10,40 @@
                     <form [formGroup]="signupForm">
 
                         <div class="mb-3">
-                            <label for="username" class="form-label">First Name</label>
-                            <input type="text" formControlName="firstName" name="firstName" class="form-control"
-                                placeholder="Enter First Name">
+                            <mat-form-field class="w-100">
+                                <mat-label>First Name</mat-label>
+                                <input matInput formControlName="firstName">
+                                <mat-error>Please Enter First Name.</mat-error>
+                            </mat-form-field>
                         </div>
                         <div class="mb-3">
-                            <label for="username" class="form-label">Last Name</label>
-                            <input type="text" formControlName="lastName" name="lastName" class="form-control"
-                                placeholder="Enter Last Name">
+                            <mat-form-field class="w-100">
+                                <mat-label>Last Name</mat-label>
+                                <input matInput formControlName="lastName">
+                                <mat-error>Please Enter Last Name.</mat-error>
+                            </mat-form-field>
                         </div>
                         <div class="mb-3">
-                            <label for="username" class="form-label">Date of Birth</label>
-                            <input type="date" formControlName="DOB" name="DOB" class="form-control">
+                            <mat-form-field class="w-100">
+                                <mat-label>Mobile Number</mat-label>
+                                <input matInput formControlName="mobileNo" maxlength="10">
+                                <mat-error>Please Enter Mobile Number.</mat-error>
+                            </mat-form-field>
                         </div>
                         <div class="mb-3">
-                            <label for="username" class="form-label">Mobile Number</label>
-                            <input type="text" formControlName="mobileNo" name="mobileNo" class="form-control"
-                                placeholder="Enter Mobile Number">
-                        </div>
-                        <div class="mb-3">
-                            <label for="username" class="form-label">Email</label>
-                            <input type="email" formControlName="email" name="email" class="form-control"
-                                placeholder="Enter email">
+                            <mat-form-field class="w-100">
+                                <mat-label>Email</mat-label>
+                                <input matInput formControlName="email">
+                                <mat-error>Please Enter Email.</mat-error>
+                            </mat-form-field>
                         </div>
 
                         <div class="mb-3">
-                            <label class="form-label" for="password-input">Password</label>
-                            <div class="position-relative auth-pass-inputgroup mb-3">
-                                <input type="password" class="form-control pe-5 password-input"
-                                    placeholder="Enter password" id="password-input" formControlName="password"
-                                    name="password">
-                            </div>
-                        </div>
-
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="auth-remember-check">
-                            <label class="form-check-label" for="auth-remember-check">Remember me</label>
+                            <mat-form-field class="w-100">
+                                <mat-label>Password</mat-label>
+                                <input type="password" matInput formControlName="password">
+                                <mat-error>Please Enter Password.</mat-error>
+                            </mat-form-field>
                         </div>
 
                         <div class="mt-4">
