--- a/src/app/components/master/dashboard/dashboard.component.html
+++ b/src/app/components/master/dashboard/dashboard.component.html
@@ -1,7 +1,12 @@
 <div class="dashboardContainer">
     <div class="mainContainer">
+        <div class="addTaskBoard" (click)="openDialog()">
+            + Add board
+        </div>
         <div class="taskContainer">
-
+            <div class="noBoards" *ngIf="taskBoards.length == 0">
+                No Boards Yet!
+            </div>
             <div class="task-board" *ngFor="let taskboard of taskBoards">
                 <div class="taskBoard example-container" cdkDropListGroup>
                     <div class="boardTitle">
@@ -14,7 +19,7 @@
                         <mat-menu #menu="matMenu">
                             <button mat-menu-item class="menuItem" (click)="openEditDialog(taskboard._id)">
                                 <span><i class="fa-solid fa-pen-to-square"></i></span> Edit</button>
-                            <button mat-menu-item class="menuItem">
+                            <button mat-menu-item class="menuItem" (click)="deleteTaskBoard(taskboard._id)">
                                 <span><i class="fa-solid fa-trash"></i></span> Delete
                             </button>
                         </mat-menu>
@@ -34,6 +39,13 @@
                                     <i class="fa-solid fa-pen-to-square"></i>
                                 </span>
                             </div>
+                            <div class="deleteTask">
+                                <span (click)="deleteTask(task._id, taskboard._id)"><i
+                                        class="fa-solid fa-trash"></i></span>
+                            </div>
+                            <div class="assignee">
+                                <span class="assgin"><i class="fa-solid fa-user"></i></span> {{ task.assign }}
+                            </div>
                         </div>
 
                         <div class="createTask" (click)="openTaskDialog(taskboard._id)">
@@ -43,10 +55,8 @@
                 </div>
             </div>
 
-            <div class="addTaskBoard" (click)="openDialog()">
-                + Add board
-            </div>
 
         </div>
+
     </div>
 </div>
