--- a/src/app/components/master/dashboard/dashboard.component.scss
+++ b/src/app/components/master/dashboard/dashboard.component.scss
@@ -5,6 +5,7 @@
 
     .mainContainer {
         display: flex;
+        position: relative;
         width: 100%;
 
         .taskContainer {
@@ -14,6 +15,16 @@
             flex-wrap: wrap;
             margin-left: 40px;
             position: relative;
+            margin-top: 22px;
+
+            .noBoards {
+                position: absolute;
+                left: 43%;
+                font-size: 30px;
+                font-weight: 500;
+                color: #afafaf;
+                margin-top: 6%;
+            }
 
             .task-board {
                 display: flex;
@@ -21,13 +32,14 @@
                 width: 23%;
             }
 
-            .addTaskBoard {
-                position: absolute;
-                right: 10px;
-                top: -12px;
-                font-size: 15px;
-                cursor: pointer;
-            }
+        }
+
+        .addTaskBoard {
+            position: absolute;
+            right: 10px;
+            top: -12px;
+            font-size: 15px;
+            cursor: pointer;
         }
     }
 }
@@ -67,6 +79,32 @@
                 z-index: 10;
                 cursor: pointer;
             }
+
+            .deleteTask {
+                position: absolute;
+                right: 10px;
+                bottom: 10px;
+                z-index: 10;
+                cursor: pointer;
+                opacity: 0;
+                transition: opacity 0.3s ease-in-out;
+                color: #f44336;
+            }
+
+            .assignee {
+                font-size: 12px;
+                margin-top: 10px;
+
+                .assgin {
+                    padding: 6px 9px;
+                    background: #ececec;
+                    border-radius: 50%;
+                }
+            }
+        }
+
+        .task:hover .deleteTask {
+            opacity: 1;
         }
 
         .createTask {
