--- a/src/app/components/task/create-task/create-task.component.html
+++ b/src/app/components/task/create-task/create-task.component.html
@@ -32,9 +32,9 @@
             </div>
             <div class="submitBtns">
                 <button class="submit" mat-raised-button color="primary" (click)="createTask()"
-                    *ngIf="!data.taskId">Save</button>
+                    *ngIf="!isEdit">Save</button>
                 <button class="submit" mat-raised-button color="primary" (click)="updateTask()"
-                    *ngIf="data.taskId">Update</button>
+                    *ngIf="isEdit">Update</button>
                 <button class="close" mat-raised-button color="warn" (click)="closeDialog()">Close</button>
             </div>
         </div>
