--- a/src/app/common/components/login/login.component.html
+++ b/src/app/common/components/login/login.component.html
@@ -25,9 +25,8 @@
                             </mat-form-field>
                         </div>
 
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="auth-remember-check">
-                            <label class="form-check-label" for="auth-remember-check">Remember me</label>
+                        <div class="forgotPassword" (click)="redirectTo('forgotPassword')">
+                            forgot password?
                         </div>
 
                         <div class="mt-4">
