--- a/src/app/common/components/login/login.component.scss
+++ b/src/app/common/components/login/login.component.scss
@@ -14,3 +14,10 @@
     cursor: pointer;
     color: #666666;
 }
+
+.eyePosition {
+    position: absolute;
+    right: 10px;
+    top: 25px;
+    cursor: pointer;
+}
