--- a/src/app/common/components/signup/signup.component.html
+++ b/src/app/common/components/signup/signup.component.html
@@ -47,7 +47,7 @@
                         </div>
 
                         <div class="mt-4">
-                            <button class="btn btn-success w-100" type="submit" (click)="signup()">Sign In</button>
+                            <button class="btn btn-success w-100" type="submit" (click)="signup()">Sign up</button>
                         </div>
 
                     </form>
@@ -58,8 +58,8 @@
         <!-- end card -->
 
         <div class="mt-4 text-center">
-            <p class="mb-0">Don't have an account ? <a href="auth-signup-basic.html"
-                    class="fw-semibold text-primary text-decoration-underline"> Signup </a> </p>
+            <p class="mb-0">Have an account ? <a href="javascript:void(0);" (click)="redirectTo('login')"
+                    class="fw-semibold text-primary text-decoration-underline"> Login </a> </p>
         </div>
 
     </div>
